# voidline

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  conductor.json  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: balance-rl.yml
api/: _db.ts  leaderboard.ts  players.ts  scores.ts  seed.ts  tsconfig.json
data/: balance.json
scripts/: balance-check.sh  balance-dispatch.sh  balance-dispatch.test.ts  balance-modal-pull.sh  balance-profile.sh  balance-report.test.ts  balance-rl-common.sh  balance-rl-report.sh  balance-rl-smoke.sh  balance-rl-train-baseline.sh  browser-smoke.mjs  build-wasm.mjs  db-init.mjs  dev-conductor.mjs  export-balance.test.ts  meta-progression-report.sh  vercel-build.mjs
sim/: Cargo.toml  README.md
sim/crates/voidline-cli/: Cargo.toml
sim/crates/voidline-cli/src/: main.rs
sim/crates/voidline-data/: Cargo.toml
sim/crates/voidline-data/src/: balance.rs  catalogs.rs  dsl.rs  lib.rs
sim/crates/voidline-meta/: Cargo.toml
sim/crates/voidline-meta/src/: account.rs  campaign.rs  champion.rs  env.rs  learned_policy.rs  lib.rs  obs.rs  policies.rs  profiles.rs
sim/crates/voidline-py/: Cargo.toml  pyproject.toml
sim/crates/voidline-py/src/: lib.rs
sim/crates/voidline-sim/: Cargo.toml
sim/crates/voidline-sim/src/: balance_curves.rs  bullets.rs  chests.rs  effects.rs  enemies.rs  engine.rs  entities.rs  experience.rs  input.rs  lib.rs  math.rs  player.rs  player_update.rs  pools.rs  powerups.rs  progression.rs  rng.rs  roguelike.rs  simulation.rs  spatial_grid.rs  spawn.rs  state.rs  synergies.rs  world.rs
sim/crates/voidline-wasm/: Cargo.toml
sim/crates/voidline-wasm/src/: lib.rs
sim/headless-host/: framing.mjs  host.mjs  package-lock.json  package.json  rng-seed.mjs
sim/training/: pyproject.toml
sim/training/configs/: learned-human.yaml  learned-novice.yaml  learned-optimizer.yaml  oracle.yaml
sim/training/tests/: test_detect_anomalies.py  test_env_contract.py  test_eval_defaults.py  test_export_onnx.py  test_hardcoded_agent.py  test_modal_flag_count.py
sim/training/voidline_rl/: __init__.py  bc.py  detect_anomalies.py  env_voidline.py  eval.py  export_onnx.py  hardcoded.py  hardcoded_eval.py  modal_app.py  rollout.py  sweep.py  train.py
sim/voidline-bench/: Cargo.toml
sim/voidline-bench/src/: host.rs  main.rs  report.rs
sim/voidline-bench/tests/: determinism.rs
sim/voidline-bot/: Cargo.toml
sim/voidline-bot/src/: champion.rs  lib.rs  meta_strategy.rs  rollout.rs  shop_strategy.rs  snapshot.rs  threat.rs
sim/voidline-bot/tests/: schema.rs
sim/voidline-bot/tests/fixtures/: snapshot-v1.json
src/: game.js  main.ts  state.ts  types.ts  utils.ts
src/entities/: bullets.test.ts  bullets.ts  chests.ts  enemies.test.ts  enemies.ts  experience-pickup.ts  experience.test.ts  experience.ts  particles.ts  player.test.ts  player.ts  powerups.ts
src/game/: account-progression.test.ts  account-progression.ts  balance-curves.test.ts  balance-curves.ts  balance-simulation.test.ts  balance-simulation.ts  balance.test.ts  balance.ts  boss-ai.test.ts  boss-catalog.ts  boss-visuals.ts  card-catalog.test.ts  card-catalog.ts  challenge-catalog.test.ts  challenge-catalog.ts  character-catalog.ts  daily-seed.test.ts  daily-seed.ts  effect-dsl.test.ts  effect-dsl.ts  hitstop.ts  input.ts  loop.ts  meta-upgrade-catalog.test.ts  meta-upgrade-catalog.ts  mutation-catalog.ts  progression.ts  relic-catalog.test.ts  relic-catalog.ts  roguelike.test.ts  roguelike.ts  shop-catalog.ts  shop.test.ts  shop.ts  upgrade-catalog-shape.test.ts  upgrade-catalog.test.ts  upgrade-catalog.ts  upgrade-tree-routes.test.ts  upgrade-tree-routes.ts  wave-flow.test.ts  (+5 more)
src/perf/: canvas-stub.ts  perf.bench.ts  rng.ts  rust-engine.bench.ts  stress-mode.ts  vitest-setup.ts
src/phaser/: game.ts  pools.ts  textures.ts
src/phaser/scenes/: BattleScene.ts  BootScene.ts
src/render/: background.ts  cockpit.ts  hangar.ts  hud.ts  leaderboard.ts  orbital-tree.ts  perf-overlay.ts  powerups.ts  world.ts
src/simulation/: events.ts  grids.ts  pools.ts  random.ts  rust-engine.ts  rust-node.ts  simulation.test.ts  simulation.ts  spatial-grid.ts
src/systems/: account.test.ts  account.ts  api.ts  camera.ts  challenges.test.ts  challenges.ts  identity.ts  relics.test.ts  relics.ts  run.ts  synergies.test.ts  synergies.ts  upgrades.test.ts  upgrades.ts  waves.ts
