[workspace]
resolver = "2"
members = [
    "crates/voidline-data",
    "crates/voidline-sim",
    "crates/voidline-meta",
    "crates/voidline-cli",
    "crates/voidline-wasm",
    "crates/voidline-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Voidline contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
tract-onnx = "0.22.1"

[profile.release]
lto = "thin"
codegen-units = 1
