[project]
name = "voidline-rl-training"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=1.0",
  "maturin>=1.8,<2",
  "modal>=1.1",
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxscript>=0.1",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "sb3-contrib==2.8.0",
  "stable-baselines3==2.8.0",
  "torch>=2.3",
]

[project.scripts]
voidline-rl-train = "voidline_rl.train:main"
voidline-rl-export-onnx = "voidline_rl.export_onnx:main"
voidline-rl-eval = "voidline_rl.eval:main"
voidline-rl-detect-anomalies = "voidline_rl.detect_anomalies:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voidline_rl"]
