[package]
name = "voidline-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for running Voidline meta-progression campaigns and emitting JSON reports."

[[bin]]
name = "voidline-cli"
path = "src/main.rs"

[dependencies]
voidline-data = { path = "../voidline-data" }
voidline-meta = { path = "../voidline-meta" }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
