[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "voidline-py"
version = "0.1.0"
requires-python = ">=3.10"
description = "Python bindings for Voidline RL balance training"

[tool.maturin]
bindings = "pyo3"
module-name = "voidline_py"
features = ["extension-module"]
