[package]
name = "voidline-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for the Voidline Rust gameplay engine."

[lib]
crate-type = ["cdylib"]

[dependencies]
voidline-data = { path = "../voidline-data" }
voidline-meta = { path = "../voidline-meta" }
voidline-sim = { path = "../voidline-sim" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.120"
serde-wasm-bindgen = "0.6.5"
